# claude_remcont

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  README.md  STATUS.md  check_health.py  circuit_breaker.py  claude-telegram-integration.md  claude-tg-bridge.logrotate  claude-tg-bridge.service  config.py  pyproject.toml  queue_manager.py  requirements-dev.txt  session_manager.py  tg_listener.py  tg_notify.py
docs/: AGENTS.md  STAGING.md
tests/: test_circuit.py  test_cleanup.py  test_config.py  test_health.py  test_queue.py  test_retry.py  test_session.py
